# rbx1

./: .gitignore  README.md  rbx1-prereq.sh  stack.xml
rbx1_apps/: CMakeLists.txt  manifest.xml  setup.py
rbx1_apps/launch/: follower.launch  follower2.launch  head_tracker.launch  object_follower.launch  object_tracker2.launch
rbx1_apps/nodes/: follower.py  follower2.py  object_follower.py  object_tracker.py  object_tracker2.py
rbx1_apps/src/: point_cloud2.py
rbx1_bringup/: CMakeLists.txt  manifest.xml
rbx1_bringup/config/: mux.yaml
rbx1_bringup/launch/: 3dsensor.launch  3dsensor.yaml  depthimage_to_laserscan.launch  fake_laser.launch  fake_laser_xtion.launch  fake_pi_robot.launch  fake_turtlebot.launch  fake_turtlebot_with_head.launch  odom_ekf.launch  openni_driver.launch  turtlebot_carpet_create.launch  turtlebot_minimal_create.launch
rbx1_bringup/nodes/: move_fake_pi_arm_start.py  odom_ekf.py
rbx1_description/: CMakeLists.txt  manifest.xml  urdf.rviz
rbx1_description/launch/: test_turtlebot_with_head.launch
rbx1_description/urdf/: arm.xacro  arm_hardware.xacro  gazebo.urdf.xacro  head.xacro  head_hardware.xacro  pi_pedestal_head_only.xacro  (+13 more)
rbx1_dynamixels/: CMakeLists.txt  dynamixels.rviz  manifest.xml
rbx1_nav/: CMakeLists.txt  amcl.rviz  amcl_groovy.rviz  cmake_install.cmake  fake_laser.rviz  gmapping.rviz  manifest.xml  nav.rviz  nav_ekf.rviz  nav_test.rviz  sim.rviz
rbx1_speech/: CMakeLists.txt  manifest.xml
rbx1_speech/nodes/: talkback.py  voice_nav.py
rbx1_vision/: CMakeLists.txt  manifest.xml  pcl.rviz  skeleton_frames.rviz
(+94 files in other folders)
